// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileList renders normally with multiple files props 1`] = `
<div
  class="root"
>
  <label
    class="label"
    for="multiple"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  height="24"
                  width="24"
                />
                <polygon
                  fill="currentColor"
                  points="18 7.5 13.5 12 18 16.5 16.5 18 12 13.5 7.5 18 6 16.5 10.5 12 6 7.5 7.5 6 12 10.5 16.5 6"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile2.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  height="24"
                  width="24"
                />
                <polygon
                  fill="currentColor"
                  points="18 7.5 13.5 12 18 16.5 16.5 18 12 13.5 7.5 18 6 16.5 10.5 12 6 7.5 7.5 6 12 10.5 16.5 6"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FileList renders normally with single file props 1`] = `
<div
  class="root"
>
  <label
    class="label"
    for="single"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  height="24"
                  width="24"
                />
                <polygon
                  fill="currentColor"
                  points="18 7.5 13.5 12 18 16.5 16.5 18 12 13.5 7.5 18 6 16.5 10.5 12 6 7.5 7.5 6 12 10.5 16.5 6"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
